# artifacts/api-server/src/routes/index.ts
@@ -1,6 +1,7 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import moviesRouter from "./movies";
+import seriesRouter from "./series";
 import ordersRouter from "./orders";
 import paymentsRouter from "./payments";
 import seedRouter from "./seed";
@@ -9,6 +10,7 @@ const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use("/movies", moviesRouter);
+router.use("/series", seriesRouter);
 router.use("/orders", ordersRouter);
 router.use("/payments", paymentsRouter);
 
